--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<h1>pahalgam</h1>
+	<p>it is a very famious place located in our valley kashmir it in pha
+	algam many trousts are commming in a tdk adjslkjsdkfslkdj</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
