--- a/main.html
+++ b/main.html
@@ -10,6 +10,22 @@
 	<h1>pahalgam</h1>
 	<p>it is a very famious place located in our valley kashmir it in pha
 	algam many trousts are commming in a tdk adjslkjsdkfslkdj</p>
+	<ol>
+		<li>hudda</li>
+		<li>hudda</li>
+		<li>hudda</li>
+		<li>hudda</li>
+		<li>hudda</li>
+		
+	</ol>
+	<ul>
+		<li>hudda</li>
+		<li>hudda</li>
+		<li>hudda</li>
+		<li>hudda</li>
+		<li>hudda</li>
+		
+</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
