--- a/main.html
+++ b/main.html
@@ -8,22 +8,23 @@
 
 <body>
 	<h1>pahalgam</h1>
+	<b>
 	<p>it is a very famious place located in our valley kashmir it in pha
 	algam many trousts are commming in a tdk adjslkjsdkfslkdj</p>
 	<ol>
-		<li>hudda</li>
-		<li>hudda</li>
+		<li><i>kdfjlskdjfsj</i>hudda</li>
+		<li><b>ldjfsdkjf</b>hudda</li>
 		<li>hudda</li>
 		<li>hudda</li>
 		<li>hudda</li>
 		
 	</ol>
 	<ul>
-		<li>hudda</li>
-		<li>hudda</li>
-		<li>hudda</li>
-		<li>hudda</li>
-		<li>hudda</li>
+		<li><b>adhjj</b>hudda</li>
+		<li><i>djfhsdfhieu</i>hudda</li>
+		<li><<b>djhfskdjhfs</b>hudda</li>
+		<li><i>djfsjdfhs</i>hudda</li>
+		<li><i>sdjfsjdhfksh</i>hudda</li>
 		
 </ul>
 	<!-- the entire body must be written by student -->
